--- a/src/ScriptCs.Launcher.Wpf/MainWindow.xaml
+++ b/src/ScriptCs.Launcher.Wpf/MainWindow.xaml
@@ -12,11 +12,13 @@
             <ColumnDefinition Width="3*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Column="1" Margin="0 50 0 0">
-            <TextBlock>Script path: </TextBlock>
-            <TextBox x:Name="Path" KeyUp="Path_KeyUp"/>
-            <Button x:Name="ExecuteButton" Click="Button_Click">Execute</Button>
-            <TextBox x:Name="StatusText" IsReadOnly="True" MinLines="5"> </TextBox>
-        </StackPanel>
+        <DockPanel Grid.Column="1" Margin="0 20 0 0">
+            <TextBlock DockPanel.Dock="Top">Script path: </TextBlock>
+            <TextBox DockPanel.Dock="Top" x:Name="Path" KeyUp="Path_KeyUp"/>
+            <TextBlock DockPanel.Dock="Top">Script params:</TextBlock>
+            <TextBox DockPanel.Dock="Top" x:Name="Params" KeyUp="Path_KeyUp"/>
+            <Button DockPanel.Dock="Top" x:Name="ExecuteButton" Click="Button_Click">Execute</Button>
+            <TextBox x:Name="StatusText" IsReadOnly="True"> </TextBox>
+        </DockPanel>
     </Grid>
 </Window>
